# ink-drop

./: .env.example  .gitignore  README.md  emailer.py  extractor.py  main.py  pyproject.toml
deploy/: setup.sh
